# chiaotu

./: .gitignore  CLAUDE.md  Cargo.toml  package-lock.json  package.json  postinstall.sh  tsconfig.json
docs/: usage.md
resources/rules/: apple.yml  direct.yml  google.yml  microsoft.yml  z.yml
resources/templates/: base.yaml  default.yml
src/: base64_decoder.rs  commands.ts  config_manager.rs  constants.ts  downloader.rs  file_reader.rs  index.ts  main.rs  node_parser.rs  prehandling.ts  yaml_utils.rs
src/commands/: add.ts  generate.ts  serve.ts  subscribe.ts
src/commands/add/: preset.ts  upstream.ts
src/errors/: configuration-error.ts  generic-io-error.ts  user-operation-error.ts
src/nodes/: mod.rs  ss.rs  trojan.rs  vless.rs  vmess.rs
src/persistence/: address.ts  clash-profile.ts  configuration.ts  configuration.types.ts  file-utils.ts  store.ts
src/utils/: produce.ts  string.ts
