[package]
name = "chiaotu"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false}
tokio = { version = "1.0", features = ["full"] }
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
urlencoding = "2.1"
futures = "0.3"
